[gd_scene load_steps=8 format=4 uid="uid://ctu48rk7jd37k"]

[ext_resource type="Script" uid="uid://bifmmd8l2h1u2" path="res://Entities/Objects/Crop/crop_alt.gd" id="1_wko6e"]
[ext_resource type="Texture2D" uid="uid://b88f5qchsvx1n" path="res://Stages/Island/Art/Forest/tilled_dirt.png" id="1_wtvfg"]
[ext_resource type="Texture2D" uid="uid://l0c4m00kywv" path="res://Entities/Objects/Crop/Art/crops.png" id="2_wko6e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ijn2n"]
texture = ExtResource("1_wtvfg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0

[sub_resource type="TileSet" id="TileSet_pfeby"]
sources/1 = SubResource("TileSetAtlasSource_ijn2n")

[sub_resource type="AtlasTexture" id="AtlasTexture_fx2ws"]
atlas = ExtResource("2_wko6e")
region = Rect2(16, 16, 64, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftjf4"]
size = Vector2(109, 96)

[node name="CropAlt" type="Node2D"]
script = ExtResource("1_wko6e")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD/////AQAFAAEAAAD//wAAAQAFAAIAAAAAAAAAAQAGAAIAAAAAAP//AQAGAAEAAAAAAP7/AQAGAAAAAAD///7/AQAFAAAAAAD+//7/AQAEAAAAAAD+////AQAEAAEAAAD+/wAAAQAEAAIAAAD+/wEAAQAEAAMAAAD//wEAAQAFAAMAAAAAAAEAAQAGAAMAAAABAAEAAQAHAAMAAAABAAAAAQAHAAIAAAABAP//AQAHAAEAAAABAP7/AQAHAAAAAAA=")
tile_set = SubResource("TileSet_pfeby")

[node name="Crops" type="Node2D" parent="."]

[node name="Crop" type="Sprite2D" parent="Crops"]
position = Vector2(-17, -20)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop2" type="Sprite2D" parent="Crops"]
position = Vector2(0, -20)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop3" type="Sprite2D" parent="Crops"]
position = Vector2(16, -20)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop4" type="Sprite2D" parent="Crops"]
position = Vector2(17, -6)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop5" type="Sprite2D" parent="Crops"]
position = Vector2(0, -6)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop6" type="Sprite2D" parent="Crops"]
position = Vector2(-17, -6)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop7" type="Sprite2D" parent="Crops"]
position = Vector2(-17, 11)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop8" type="Sprite2D" parent="Crops"]
position = Vector2(0, 11)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Crop9" type="Sprite2D" parent="Crops"]
position = Vector2(17, 11)
texture = SubResource("AtlasTexture_fx2ws")
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_ftjf4")

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
